golang seminar 6: code review fixes

--- a/Go/seminar6/1 - форматирование.md
+++ b/Go/seminar6/1 - форматирование.md
@@ -16,15 +16,15 @@
 Многие из функций этого пакета определены в нескольких разных вариантах, которые можно опознать по первым или
 последним буквам имени этой функции:
 
-1. Если имя функции оканчивается на `ln`, она делает то же самое, что и функция без этого окончания;
-единственное отличие -- символ перевода строки `'\n'`, который добавляется в конец. 
-Пример: функции `Print` и `Println`.
-2. Если имя функции оканчивается на `f`, то она использует специальную строку форматирования в стиле языка C. 
-Пример: функции `Print` и `Printf`.
+1. Если имя функции оканчивается на `ln`, она делает то же самое, что и функция без этого окончания, с двумя отличиями:
+вариант с `ln` добавляет символ перевода строки `'\n'` в конец и всегда добавляет пробелы между соседними аргументами
+ (вариант без ln добавляет пробелы только если оба соседних аргумента не являются строками). **Пример**: функции `Print` и `Println`.
+2. Если имя функции оканчивается на `f`, то она использует специальную строку форматирования в стиле языка C.
+**Пример**: функции `Print` и `Printf`.
 3. Если имя функции начинается на `F`, то она работает не со стандартным вводом или стандартным выводом, 
-а с явно указанным объектом вида `io.Writer` (например, с файлом). Пример: функции `Println` и `Fprintln`.
+а с явно указанным объектом вида `io.Writer` (например, с файлом). **Пример**: функции `Println` и `Fprintln`.
 4. Если имя функции начинается на `S` (кроме функции `Scan`), то она работает не со стандартным вводом или стандартным выводом, 
-а со строкой. Пример: функции `Printf` и `Sprintf`.
+а со строкой. **Пример**: функции `Printf` и `Sprintf`.
 
 ## Вывод в stdout
 
