--- a/Go/seminar6/3 - время.md
+++ b/Go/seminar6/3 - время.md
@@ -6,6 +6,7 @@
     - [Сравнение](#сравнение)
     - [Duration](#duration)
   - [Таймер и тикер](#таймер-и-тикер)
+  - [Sleep и After](#sleep-и-after)
   - [Зависимость от time.Now](#зависимость-от-timenow)
 
 # Время (пакет time)
@@ -340,6 +341,60 @@ func tickerExample() {
 func main() {
     timerExample()
     tickerExample()
+}
+```
+
+## Sleep и After
+
+В golang есть 2 на первый взгляд одинаковых способа сделать так, чтобы программа "поспала" заданное количество времени:
+`time.Sleep(5 * time.Second)` и `<-time.After(5 * time.Second)`. `time.After` является обёрткой вокруг таймера:
+```go
+// After waits for the duration to elapse and then sends the current time
+// on the returned channel.
+// It is equivalent to NewTimer(d).C.
+// The underlying Timer is not recovered by the garbage collector
+// until the timer fires. If efficiency is a concern, use NewTimer
+// instead and call Timer.Stop if the timer is no longer needed.
+func After(d Duration) <-chan Time {
+    return NewTimer(d).C
+}
+```
+
+Важные отличия After (таймера) и Sleep:
+
+- горутина, вызывающая таймер, переходит в заблокированное состояние; она может быть разблокирована только при получении данных из канала
+- горутина, вызывающая Sleep, приостанавливается, но она не блокируется, потому что не используется канал
+
+Пример. Может потребоваться прервать сон досрочно, при получении данных из другого канала, например, при отмене контекста:
+```go
+package main
+
+import (
+    "context"
+    "fmt"
+    "time"
+)
+
+func maybeWait(ctx context.Context, duration time.Duration) {
+    start := time.Now()
+    select { // с time.Sleep так нельзя
+    case <-ctx.Done():
+        fmt.Println("context canceled, waited for", time.Since(start))
+    case <-time.After(duration):
+        fmt.Println("waited full", time.Since(start))
+    }
+}
+
+func main() {
+    ctx, cancel := context.WithCancel(context.Background())
+    defer cancel()
+
+    go func() {
+        time.Sleep(2 * time.Second)
+        cancel()
+    }()
+
+    maybeWait(ctx, 3*time.Second)
 }
 ```
 
