golang seminar 9: case study

--- a/Go/seminar9/6 - рекомендации.md
+++ b/Go/seminar9/6 - рекомендации.md
@@ -1,4 +1,9 @@
-
+- [Рекомендации](#рекомендации)
+  - [AAA](#aaa)
+  - [Неоптимальные решения из ДЗ](#неоптимальные-решения-из-дз)
+    - [Смешивание тест-кейсов](#смешивание-тест-кейсов)
+    - [Используйте табличные тесты](#используйте-табличные-тесты)
+    - [Неудачные абстракции усложняют тестирование.](#неудачные-абстракции-усложняют-тестирование)
 
 # Рекомендации
 
@@ -124,3 +129,228 @@ func TestMaxValue(t *testing.T) {
     }
 }
 ```
+
+## Неоптимальные решения из ДЗ
+
+### Смешивание тест-кейсов
+
+Пример. В одной функции тестирования проверяется несколько различных сценариев.
+
+```go
+func TestGameProgress(t *testing.T) {
+    game, _ := NewGame("apple", "fruits", "easy", "Круглый фрукт", 5)
+
+    // Попытка угадать правильную букву
+    if !game.GuessLetter('a') {
+        t.Errorf("Буква 'a' должна была быть угадана")
+    }
+    if game.CurrentProgress() != "a____" {
+        t.Errorf("Ожидаемый прогресс 'a____', но получен %s", game.CurrentProgress())
+    }
+
+    // Попытка угадать неправильную букву
+    if game.GuessLetter('z') {
+        t.Errorf("Буква 'z' не должна быть угадана")
+    }
+    if game.AttemptsLeft != 4 {
+        t.Errorf("Ожидается 4 оставшихся попытки, но получено %d", game.AttemptsLeft)
+    }
+}
+```
+
+В этом примере между тест-кейсами нет чёткой границы (постороннему человеку не сразу понятно, что здесь 
+проверяется 2 разных случая). 
+
+В дальнейшем, если мы добавим какую-то функциональность в игру и захотим покрыть её тестами, то
+первый тест-кейс может оказать влияние на второй, т.к. в обоих тест-кейсах действия происходят с одной и той
+же переменной `game`. Это может привести к ошибкам в тестах, которые будет сложно отловить.
+
+Можно переписать эту функцию в парадигме AAA, с помощью convey:
+
+```go
+func TestGameProgress(t *testing.T) {
+    Convey("TestGameProgress", t, func() {
+        game, _ := NewGame("apple", "fruits", "easy", "Круглый фрукт", 5)
+		
+        Convey("Попытка угадать правильную букву", func() {
+            So(game.GuessLetter('a'), ShouldBeTrue, "Буква 'a' должна была быть угадана")
+            So(game.CurrentProgress(). ShouldEqual, "a____")
+        })
+		
+        Convey("Попытка угадать неправильную букву", func() {
+            So(game.GuessLetter('z'), ShouldBeFalse, "Буква 'z' не должна быть угадана")
+            So(game.AttemptsLeft, ShouldEqual, 4)
+        })
+    })
+}
+```
+
+### Используйте табличные тесты
+
+Пример. В одной функции тестирования происходит несколько очень однотипных проверок,
+
+```go
+func TestGetRandomWord_ValidTopicAndDifficulty(t *testing.T) {
+    dictionary := NewDictionary()
+
+    word, hint := dictionary.GetRandomWord(0, "nature")
+    assert.NotEmpty(t, word)
+    assert.NotEmpty(t, hint)
+
+    word, hint = dictionary.GetRandomWord(1, "math")
+    assert.NotEmpty(t, word)
+    assert.NotEmpty(t, hint)
+
+    word, hint = dictionary.GetRandomWord(2, "golang")
+    assert.NotEmpty(t, word)
+    assert.NotEmpty(t, hint)
+}
+```
+
+Для повышения читаемости, лучше переписать это как табличный тест:
+
+```go
+func TestGetRandomWord_ValidTopicAndDifficulty(t *testing.T) {
+    t.Parallel()
+	
+    type TestCase struct {
+        arg0 int
+        arg1 string
+    }
+	
+    testCases := []TestCase{
+        {
+            arg0: 0,
+            arg1: "nature",
+        },
+        {
+            arg0: 1,
+            arg1: "math",
+        },
+        {
+            arg0: 2,
+            arg1: "golang",
+        },  
+    }
+	
+    for _, tc := range testCases {
+        // arrange
+        dictionary := NewDictionary()
+		
+        // act
+        word, hint := dictionary.GetRandomWord(tc.arg0, tc.arg1)
+		
+        // assert
+        assert.NotEmpty(t, word)
+        assert.NotEmpty(t, hint)
+    }
+}
+```
+
+### Неудачные абстракции усложняют тестирование
+
+Пример. Функция, которая ожидает пользовательский ввод в течение некоторого времени, а затем возвращает ошибку,
+если ввода не поступило.
+
+```go
+func GetUserInputWithTimer(timeout time.Duration) (input string, err error) {
+    inputChan := make(chan string)
+    errorChan := make(chan error)
+
+    go func() {
+        reader := bufio.NewReader(os.Stdin)
+        input, err := reader.ReadString('\n')
+
+        if err != nil {
+            errorChan <- err
+        } else {
+            inputChan <- strings.TrimSpace(input)
+        }
+    }()
+
+    select {
+    case input := <-inputChan:
+        return input, nil
+
+    case err := <-errorChan:
+        return "", err
+
+    case <-time.After(timeout):
+        return "", fmt.Errorf("время на ввод истекло")
+    }
+}
+```
+
+Тест для этой функции:
+
+```go
+func TestGetUserInputWithTimer_ValidInput(t *testing.T) {
+    reader, writer, _ := os.Pipe()
+    oldStdin := os.Stdin
+    os.Stdin = reader
+
+    defer func() {
+        os.Stdin = oldStdin
+    }()
+
+    go func() {
+        writer.Write([]byte("A\n"))
+        writer.Close()
+    }()
+
+    expected := "A"
+    result, err := GetUserInputWithTimer(2 * time.Second)
+
+    if err != nil {
+        t.Fatalf("Ошибка при вводе: %v", err)
+    }
+
+    if result != expected {
+        t.Errorf("Ожидалось '%s', но получено '%s'", expected, result)
+    }
+}
+```
+
+Выбранный в данном случае подход не оптимальный по нескольким причинам:
+
+1. Нельзя распараллелить несколько тест-кейсов, т.к. тестируемая функция полагается на конкретный источник ввода `os.Stdin`.
+В функции тестирования при этом приходится подменять `os.Stdin` и эмулировать ввода туда. Если в проекте есть другие тесты, 
+которые тоже работают с `os.Stdin`, то эти тесты могут оказать влияние друг на друга при одновременной работе.
+2. Не покрыты тестами случаи ошибки при вводе (`input, err := reader.ReadString('\n')`) и таймаута ввода `case <-time.After(timeout):`.
+
+Можно переписать функцию `GetUserInputWithTimer`, добавив в неё в качестве зависимостей абстрактный ввод
+и абстрактный таймер:
+
+```go
+func GetUserInputWithTimer(input io.Reader, timer *time.Timer) (scanned string, err error) {
+    inputChan := make(chan string)
+    errorChan := make(chan error)
+
+    go func() {
+        reader := bufio.NewReader(input)
+        scanned, err := reader.ReadString('\n')
+
+        if err != nil {
+            errorChan <- err
+        } else {
+            inputChan <- strings.TrimSpace(scanned)
+        }
+    }()
+
+    select {
+    case scanned := <-inputChan:
+        return scanned, nil
+
+    case err := <-errorChan:
+        return "", err
+
+    case <-timer.C:
+        return "", fmt.Errorf("время на ввод истекло")
+    }
+}
+```
+
+Вызов функции в реальном коде изменится незначительно (нужно будет явно передать `os.Stdin` первым параметром,
+и таймер вместо таймаута -- вторым). С точки зрения написания тестов, будет возможность имитировать
+произвольное поведение входных данных (включая ошибку чтения). Кроме этого, будет возможность протестировать
+поведение с таймаутом.
