golang seminar 9: fix typo

--- a/Go/seminar9/6 - рекомендации.md
+++ b/Go/seminar9/6 - рекомендации.md
@@ -314,7 +314,7 @@ func TestGetUserInputWithTimer_ValidInput(t *testing.T) {
 Выбранный в данном случае подход не оптимальный по нескольким причинам:
 
 1. Нельзя распараллелить несколько тест-кейсов, т.к. тестируемая функция полагается на конкретный источник ввода `os.Stdin`.
-В функции тестирования при этом приходится подменять `os.Stdin` и эмулировать ввода туда. Если в проекте есть другие тесты, 
+В функции тестирования при этом приходится подменять `os.Stdin` и эмулировать ввод туда. Если в проекте есть другие тесты, 
 которые тоже работают с `os.Stdin`, то эти тесты могут оказать влияние друг на друга при одновременной работе.
 2. Не покрыты тестами случаи ошибки при вводе (`input, err := reader.ReadString('\n')`) и таймаута ввода `case <-time.After(timeout):`.
 
