golang seminar 9: code review fix

--- a/Go/seminar9/1 - основы тестирования.md
+++ b/Go/seminar9/1 - основы тестирования.md
@@ -87,6 +87,9 @@
 
 [Параллельный запуск табличных тестов](./examples/part1/parallel)
 
+Для параллельного запуска не обязательно (но всё равно желательно) оформлять тесты как табличные:
+параллельность обеспечивает `t.Run(...)` + `t.Parallel()` внутри.
+
 ## Остальное
 
 Для отладки функций тестирования можно использовать `t.Log` (логирование в функции тестирования). 
