--- a/Go/seminar11/3 - мьютексы.md
+++ b/Go/seminar11/3 - мьютексы.md
@@ -17,10 +17,10 @@
 ## sync.Mutex
 
 Простой мьютекс с одним типом блокировки. Когда горутина вызывает для мьютекса `Lock()`, она переходит
-в состояние `waiting`. Чтобы эффективнее использовать поток ОС (M), планировщик может отдать M другой горутине.
+в состояние `waiting`. Чтобы эффективнее использовать `M` (поток ОС), планировщик может отдать `M` другой горутине.
 
 Когда горутине удастся получить блокировку, то она перейдёт в состояние `runnable`, и планировщик сможет передать
-ей M, чтобы горутина продолжила выполнять код. Пока горутина не снимет блокировку (вызвав для мьютекса `Unlock()`),
+ей `M`, чтобы горутина продолжила выполнять код. Пока горутина не снимет блокировку (вызвав для мьютекса `Unlock()`),
 все остальные горутины, которые вызвали `Lock()` для этого же мьютекса, будут оставаться в состоянии `waiting`.
 
 Рекомендуется планировать парный вызов `Unlock()` с помощью `defer`.
