--- a/Go/seminar11/1 - горутины.md
+++ b/Go/seminar11/1 - горутины.md
@@ -40,54 +40,48 @@
 что ОС предоставила ему доступ к определённому ядру, и поток
 выполняет на этом ядре свой код.
 
-В любой момент времени (нет возможности управлять этим) ОС может
-прервать выполнение потока и передать ядро другому потоку. Поток,
-у которого забрали доступ к ядру, переходит в статус **готовность к выполнению**.
+Если общее количество потоков ОС становится больше, чем количество
+ядер CPU, то потоки начинают конкурировать за ядра. В таком случае,
+планировщик ОС начинает переключать потоки.
 
-Если ОС обслуживает больше потоков, чем доступно ядер CPU, 
-то выполняющиеся потоки будут **конкурировать** за ядра,
-потому что ОС будет их переключать.
+При переключении потоков, планировщик выдаёт потоку доступ к ядру
+на определённый интервал времени (значение интервала может быть разным),
+после чего переводит текущий поток в статус **готовность к выполнению**.
+Помимо этого, требуется сохранить данные текущего потока и загрузить данные
+нового потока. Эта операция называется переключение контекста.
+Переключение контекста -- относительно дорогостоящая операция: 
+на современном железе одно переключение контекста занимает примерно 1.5 мкс.
 
-В некоторых случаях ОС может останавливать поток не для того,
-чтобы передать ядро другому потоку, а по причине того, 
-что поток ждёт чего-то, прежде чем сможет продолжить. 
-Причины перевода поток в статус **ожидание**:
+Код потока может совершить синхронный системный вызов, в этом случае,
+планировщик ОС переводит поток в статус **ожидание**. 
+Примеры синхронных системных вызовов:
 
-- синхронные системные вызовы
-- вызовы системных примитивов синхронизации (e.g., мьютексы или атомарные процессорные операции)
-- аппаратное ожидание (сеть или диск)
+- использование примитивов синхронизации, например, мьютексов или атомарных операций
+- аппаратное ожидание (сеть, диск)
 
-Итак, ОС может переключать потоки по 2 причинам:
+Планировщик переключает контекст для потока в статусе **ожидание**, не дожидаясь,
+пока закончится интервал, отведённый текущему потоку. 
 
-1. Равномерное распределение ресурсов CPU, когда потоков больше, чем ядер.
-2. Когда поток сам совершает такие операции, которые подразумевают переход его в ожидание (блокирующие операции).
+**Частое переключение контекста приводит к плохой производительности приложений**.
 
-Когда ОС переключает потоки, ей требуется сохранить данные текущего потока, 
-чтобы потом была возможность продолжить его выполнение. Эта операция называется
-переключение контекста. Переключение контекста -- дорогостоящая операция, 
-на современном железе она занимает примерно 1.5 мкс. 
-
-**Основная проблема субоптимальной (плохой) производительности 
-многопоточных приложений -- переключение контекста чаще, чем нужно**.
-
-Для оптимизации использования ресурсов приложениями, 
-можно выделить 2 подхода:
+Для оптимизации работы приложения, можно выделить 2 подхода:
 
 1. Ограничивать общее количество потоков, которые обслуживает ОС на данном компьютере.
-Это не относится к разработке приложений на конкретном ЯП, но в целом можно и нужно
-ограничивать как количество запускаемых на ОС приложений, так и количество потоков, 
-которые они порождают.
+Это не относится к приложению напрямую, но в целом можно и нужно ограничивать 
+как количество запускаемых на ОС приложений, так и количество потоков, которые они порождают.
 
 2. Избегать слишком частого переключения контекста из-за блокирующих операций.
 
-Рантайм golang содержит ряд оптимизаций, основная цель которых -- 
-**избежать слишком частого переключения контекста из-за блокирующих операций**.
+Рантайм golang содержит ряд оптимизаций, которые позволяют **уменьшить количество переключений 
+контекста в ходе блокирующих операций**. Эти оптимизации не являются универсальными:
+планировщик ОС по-прежнему будет переключать контекст, если потоков слишком много, или
+если поток будет использовать блокирующие операции.
 
 ## Решение в golang
 
 Разработчики golang сосредоточились на решении проблемы слишком частого переключения контекста
 из-за блокирующих операций. Приложения на golang вообще лишены доступа к потокам уровня ОС;
-вместо этого, рантайм предоставляет **виртуальные потоки уровня приложения** -- горутины.
+вместо этого, рантайм предоставляет во многом аналогичную абстракцию -- горутины.
 
 Код приложения особым образом (с помощью ключевого слова `go`) сообщает рантайму,
 что эту функцию необходимо запустить в отдельном виртуальном потоке. 
@@ -95,19 +89,18 @@
 **горутина -- это просто функция**. Входная точка любого приложения 
 на golang -- функция `main` в пакете с таким же именем -- тоже горутина.
 
-Итак, запуск любого приложения на golang порождает несколько виртуальных потоков (горутин):
+Итак, запуск любого приложения на golang порождает несколько горутин:
 
 1. Функция `main` пакета `main`.
 2. Сборщик мусора (GC).
-3. Network poller -- оптимизирует блокирующие вызовы, связанные с сетевым I/O.
+3. Network poller -- оптимизирует некоторые виды синхронных системных вызовов.
 
 Кроме этого, приложение может порождать другие горутины с помощью инструкции `go`.
 
 Планировщик golang управляет горутинами, предоставляя им доступ к потоку ОС и 
-отбирая этот доступ, как планировщик потоков ОС делает это с потоками приложений.
-Планировщик golang не может вмешиваться к работу планировщика ОС; вместо этого, 
-планировщик переключает выполнение различных горутин (виртуальных потоков), 
-**используя для этого один поток ОС**.
+отбирая этот доступ, подобно тому, как планировщик ОС делает это с потоками уровня ОС.
+Планировщик golang не может вмешиваться в работу планировщика ОС; вместо этого, 
+планировщик переключает выполнение различных горутин, **используя для этого один поток ОС**.
 
 Во многих ситуациях разные горутины могут работать с общими участками памяти
 (когда мы передаём переменную по указателю), но следует понимать, что 
@@ -118,20 +111,20 @@
 В качестве итога можно сказать, что golang отличается от других языков 
 только тем, как он оптимизирует работу приложения с потоками ОС:
 
-1. Рантайм golang сам управляет запуском потоков ОС, а приложения этой возможности лишены.
-2. Оптимизация возможна за счёт того, что каждый виртуальный поток работает со своей областью памяти.
+1. Рантайм golang сам управляет жизненным циклом потоков ОС, а приложения этой возможности лишены.
+2. Оптимизация возможна за счёт того, что каждая горутина работает со своей областью памяти.
 Если одновременно хранить данные (стек) всех виртуальных потоков, то переключение виртуальных
 потоков будет значительно быстрее переключения контекста на уровне ОС.
-3. Оптимизация заключается в том, что несколько виртуальных потоков получают возможность
-выполняться на общем треде ОС, используя дешёвое переключение виртуального контекста.
+3. Оптимизация заключается в том, что несколько горутин получают возможность выполняться 
+на общем потоке ОС, используя дешёвое переключение виртуального контекста.
 
 Важно понимать, что экономия на переключении контекста -- фактически единственное
 преимущество golang перед другими языками. Если использовать его для других задач,
-то преимущества не будет (golang в целом медленнее C) или оно будет не очень существенным.
-К примеру, код на golang в целом производительнее кода на Python, но у Python есть другие
-преимущества -- система типов, которая подходит для построения мощных абстракций (ORM).
+то преимущества может не быть (golang в целом медленнее C), или оно будет не очень существенным.
 
-Если от приложения не требуется высокой производительности, то может быть 
+Например, код на golang в целом производительнее кода на Python, но у Python есть другие
+преимущества -- система типов, которая подходит для построения мощных абстракций (ORM).
+Если от приложения не требуется высокая производительность, то может быть 
 проще и дешевле разработать его на Python.
 
 ## Модель MGP
@@ -145,11 +138,10 @@
 - `M` (машина) - потоки уровня ОС, на базе которых выполняются `G`
 - `P` (процессор) - логический процессор, обычно ассоциируется с ядром процессора
 
-Подобно тому, как потоки ОС могут находиться в одном из трёх статусов (ожидание, готовность и выполнение),
-`G` тоже может находиться в одном из 3 состояний:
+Состояния, в которых может находиться `G`:
 
 1. `waiting` -- G совершила блокирующую операцию.
-2. `runnable` -- G может продолжить выполнение, но пока что она не выполняется в конкретном M.
+2. `runnable` -- G может продолжить выполнение, но пока что она не выполняется на каком-либо M.
 3. `running` -- G выполняется на конкретном M до тех пор, пока не будет прервана планировщиком 
 или не совершит блокирующую операцию.
 
@@ -159,9 +151,10 @@
 Эта очередь может быть пустой. Максимальная вместимость локальной очереди каждого `P`
 составляет 256 `G`.
 
-Планировщик порождает `M` по необходимости. Уже запущенные `M` не останавливаются,
-а переиспользуются. `M` запускается на основе потоков ОС. По умолчанию, общее 
-количество `M` в приложении ограничено числом 10 000.
+`M` запускается на основе потоков ОС. По умолчанию, общее количество `M` в приложении 
+ограничено числом 10 000. Планировщик порождает `M` по мере необходимости.
+Если выделенный `M` больше не нужен, то он не удаляется, а останавливается 
+и сохраняется для дальнейшего использования.
 
 В ходе своей работы, `M` связывается со свободным `P` (с которым не связаны другие `M`)
 и выполняет горутины `G` из локальной очереди `P`. Если локальная очередь 
