--- a/Go/seminar11/0 - ДЗ.md
+++ b/Go/seminar11/0 - ДЗ.md
@@ -123,7 +123,7 @@ func ProcessLinesFromUrl(url string) error {
     defer func() { _ = resp.Body.Close() }()
 
     if resp.StatusCode != http.StatusOK {
-        return fmt.Errorf("error fetching the URL: %s", resp.Status)
+        return fmt.Errorf("error: received non-200 response status: %s", resp.Status)
     }
 
     const (
